Fixed some more formatting and added new commands / environments

--- a/usb-book/partes/capitulo1.tex
+++ b/usb-book/partes/capitulo1.tex
@@ -1,6 +1,8 @@
-\chapter{@nombreCapítulo}
+\renewcommand{\chapterTitle}{Marco Teórico\xspace}
+
+\chapter{\chapterTitle}
 \label{capitulo1}
-\lhead{Capítulo 1. \emph{@nombreCapítulo}}
+\lhead{Capítulo 1. \emph{\chapterTitle}}
 
 % De qué va a tratar el capítulo
 % El capítulo 1 suele ser el marco teórico.
@@ -9,7 +11,7 @@
 \begin{definition}
 \label{definicion1}
 \blindtext, donde:
-\begin{itemize} 
+\begin{itemize}
 \item $X$ es $\gamma - 2$.
 \item $A$ es un conjunto de \textbf{cosas}.
 \end{itemize}
