--- a/usb-book/partes/capitulo2.tex
+++ b/usb-book/partes/capitulo2.tex
@@ -1,5 +1,7 @@
-\chapter{@nombreCapítulo}
+\renewcommand{\chapterTitle}{Marco Tecnológico\xspace}
+
+\chapter{\chapterTitle}
 \label{capitulo2}
-\lhead{Capítulo 2. \emph{@nombreCapítulo}}
+\lhead{Capítulo 2. \emph{\chapterTitle}}
 
 \Blindtext
