--- a/usb-book/partes/capitulo3.tex
+++ b/usb-book/partes/capitulo3.tex
@@ -1,5 +1,7 @@
-\chapter{@nombreCapítulo}
+\renewcommand{\chapterTitle}{Marco Metodológico\xspace}
+
+\chapter{\chapterTitle}
 \label{capitulo3}
-\lhead{Capítulo 3. \emph{@nombreCapítulo}}
+\lhead{Capítulo 3. \emph{\chapterTitle}}
 
 \Blindtext
