--- a/usb-book/partes/capitulo4.tex
+++ b/usb-book/partes/capitulo4.tex
@@ -1,5 +1,7 @@
-\chapter{@nombreCapítulo}
+\renewcommand{\chapterTitle}{Desarrollo\xspace}
+
+\chapter{\chapterTitle}
 \label{capitulo4}
-\lhead{Capítulo 4. \emph{@nombreCapítulo}}
+\lhead{Capítulo 4. \emph{\chapterTitle}}
 
 \Blindtext
