Minor changes, really.

--- a/usb-book/partes/acta.tex
+++ b/usb-book/partes/acta.tex
@@ -22,7 +22,7 @@ COORDINACIÓN DE INGENIERÍA DE LA COMPUTACIÓN}
 \bigskip
 \bigskip
 
-\textsc{\bfseries \projectTitle}
+\textsc{\textbf{\projectTitle}}
 
 \bigskip
 \bigskip
@@ -32,7 +32,7 @@ COORDINACIÓN DE INGENIERÍA DE LA COMPUTACIÓN}
 \begin{minipage}{\textwidth}
 \centering
 Presentado por: \\
-\textsc{\bfseries \authorName} \\
+\textsc{\textbf{\authorName}} \\
 
 \bigskip
 \bigskip
