--- a/usb-book/partes/capitulo2.tex
+++ b/usb-book/partes/capitulo2.tex
@@ -1,4 +1,4 @@
-\renewcommand{\chapterTitle}{Marco Tecnológico\xspace}
+\providecommand{\chapterTitle}{Marco Tecnológico\xspace}
 
 \chapter{\chapterTitle}
 \label{capitulo2}
