--- a/usb-book/partes/capitulo4.tex
+++ b/usb-book/partes/capitulo4.tex
@@ -1,4 +1,4 @@
-\renewcommand{\chapterTitle}{Desarrollo\xspace}
+\providecommand{\chapterTitle}{Desarrollo\xspace}
 
 \chapter{\chapterTitle}
 \label{capitulo4}
@@ -28,6 +28,7 @@
 
 \section{Ideas iniciales}
 
+\begin{blueleft}
 Se comenzó con algunas ideas que consideramos básicas para el lenguaje.
 
 \begin{itemize}
@@ -37,6 +38,7 @@ Se comenzó con algunas ideas que consideramos básicas para el lenguaje.
     \item El sistema de tipos debe tener tipos dependientes.
     \item Los alcances del lenguaje deben ser determinados por la indentación.
 \end{itemize}
+\end{blueleft}
 
 \section{Expresiones, tipos y sus constructores}
 
