Added first bibliography article

--- a/usb-book/partes/introduccion.tex
+++ b/usb-book/partes/introduccion.tex
@@ -8,9 +8,9 @@
 
 % Trabajos anteriores
 \blindtext
-\cite{fuente1} presenta un trabajo que \ldots
+\cite{mixfix} presenta un trabajo que \ldots
 
-\citeauthor{fuente2} es otro autor que \ldots
+\citeauthor{mixfix} es otro autor que \ldots
 
 % Objetivo general
 \blindtext
